# veg

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  TODO  config.cmake.in  fn.cpp  parse.cpp  vcpkg.json
benchmark/: CMakeLists.txt
benchmark/src/: uwunion.cpp  vec.cpp
cmake/: compiler_warnings.cmake  extra_local_settings.cmake  install-config.cmake.in  install-rules.cmake  sanitizers.cmake  variables.cmake
codegen/: boost_preprocessor.py  hedley.py  tuple.py
docs/: CMakeLists.txt  assert.rst  concepts.rst  conf.py  index.rst  requirements.txt  tuple.rst  utility.rst
example/: CMakeLists.txt
include/veg/: argparse.hpp  assert.hpp  box.hpp  cmp.hpp  dynamic_stack.hpp  fn_dyn.hpp  fn_ref.hpp  fn_view.hpp  module.modulemap  option.hpp  ref.hpp  slice.hpp  string_ref.hpp  timer.hpp  tuple.hpp  utf8.hpp  uwunion.hpp  vec.hpp  vector.hpp
include/veg/functional/: bind.hpp  compose.hpp  convert.hpp  copy_fn.hpp  curry.hpp  indexed.hpp  into.hpp  overload.hpp  pipe.hpp  utils.hpp
include/veg/internal/: algorithm.hpp  assert_impl.hpp  byte_string_ref.hpp  cmp.hpp  collection_algo.hpp  concept_macros.hpp  dbg.hpp  delete_special_members.hpp  dyn_index.hpp  epilogue.hpp  fix_index.hpp  fmt.hpp  has_asan.hpp  intcmp.hpp  integer_seq.hpp  macros.hpp  memory.hpp  meta_int.hpp  meta_int_dyn.hpp  meta_int_fix.hpp  narrow.hpp  parse.hpp  preprocessor.hpp  prologue.hpp  simple_string.hpp  std.hpp  storage.hpp  terminate.hpp  tuple_generic.hpp  tuple_spec.hpp  type_traits.hpp  typedefs.hpp  visit.hpp
include/veg/internal/.external/: boostpp.ext.h  boostpp.h
include/veg/legacy/iterator/: begin_end.hpp  zip_iterator.hpp
include/veg/memory/: address.hpp  aligned_alloc.hpp  alloc.hpp  dynamic_stack.hpp  placement.hpp  stack_alloc.hpp
include/veg/type_traits/: alloc.hpp  assignable.hpp  constructible.hpp  core.hpp  invocable.hpp  primitives.hpp  tags.hpp  value_category.hpp
include/veg/type_traits/cpo/: tombstone.hpp
include/veg/util/: assert.hpp  compare.hpp  dbg.hpp  defer.hpp  dynstack_alloc.hpp  get.hpp  swap.hpp  timer.hpp  unreachable.hpp
source/: parse.cpp  time.cpp  ub.cpp  veg.cpp
src/: alloc.cpp  argparse.cpp  parse.cpp  time.cpp  ub.cpp  veg.cpp
test/: .clang-tidy  CMakeLists.txt
test/include/: assert_death.hpp  doctest.h  static_assert.hpp
test/source/: doctest_main.cpp  test_dynamic_stack.cpp  test_fn_view.cpp  test_index.cpp  test_option.cpp  test_option.stx.cpp  test_parser.cpp  test_tuple.cpp  test_uwunion.cpp  vec.cpp  veg_test.cpp
test/src/: aligned_alloc.cpp  doctest_main.cpp  example.cpp  null.cpp  test_argparse.cpp  test_dynamic_stack.cpp  test_fn_view.cpp  test_function_ref.cpp  test_index.cpp  test_int_c.cpp  test_option.cpp  test_option.stx.cpp  test_parser.cpp  test_tuple.cpp  test_uwunion.cpp  vec.cpp
